--- a/girl/girl.html
+++ b/girl/girl.html
@@ -56,7 +56,7 @@
        <div id="clock">
          <div id="c_1"></div>
          <div id="c_2"></div>
-         <img id="colon" src="images/tokei/colon.png">
+         <img id="colon" src="../images/tokei/colon.png">
          <div id="c_3"></div>
          <div id="c_4"></div>
        </div>
