--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
        <img src="images/table.png" class="dark temae" id="table">
        <img src="images/game.png" id="game_rimokon" class="dark temae">
-       <img src="images/rimokon.png" id="rimokon" class="dark temae">
+       <img src="images/rimokon.png" id="rimokon" class="dark temae hover">
        <div id="p_monitor"><img class="temae pc dark hover" id="pc" src="images/p_off.png"></div>
        <img class="temae pc dark hover" src="images/pc.png">
        <div id="mouse_d"><img class="temae dark" id="mouse" src="images/mouse.png"></div>
