--- a/girl/girl.html
+++ b/girl/girl.html
@@ -82,7 +82,7 @@
        <img src="images/tv_f.png" class="tv dark hover">
 
        <img src="images/table.png" class="dark temae" id="table">
-       <img src="images/rimokon.png" id="rimokon" class="dark temae">
+       <img src="images/rimokon.png" id="rimokon" class="dark temae hover">
        <img src="images/cloth.png" id="cloth" class="dark temae">
        <div id="p_monitor"><img class="temae pc dark hover" id="pc" src="images/p_off.png"></div>
        <img class="temae pc dark hover" src="images/pc.png">
