--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
        <img src="images/zoomout.png" id="zoomout" class="zoom" alt="zoomout">
        <img src="images/title.png" id="title" alt="Peep">
        <img src="images/sun.png" id="sun" class="sora">
-       <img src="images/moon.png" id="moon" class="sora">
+       <img src="" id="moon" class="sora">
        <img src="images/reload.png" id="reload" class="hover" alt="reload"><!--リロードボタン。後で消したい-->
        <img src="images/help.png" id="help_btn" class="hover" alt="help">
        <img src="images/bg.png" id="house" class="dark">
