--- a/girl/girl.html
+++ b/girl/girl.html
@@ -7,19 +7,18 @@
     <link rel="stylesheet" href="style.css">
     <script src="../jquery-3.5.1.min.js"></script>
 	  <script src="script/script.js"></script>
-    <script src="script/click.js"></script>
+    <script src="../script/click.js"></script>
     <script src="script/reload.js"></script>
     <script src="script/move.js"></script>
 
-    <script src="script/walk.js"></script>
-    <script src="script/sleep.js"></script>
+    <script src="../script/sleep.js"></script>
     <script src="script/pc.js"></script>
-    <script src="script/read.js"></script>
+    <script src="../script/read.js"></script>
     <script src="script/syugei.js"></script>
-    <script src="script/sumaho.js"></script>
+    <script src="../script/sumaho.js"></script>
 
-    <script src="script/haikei.js"></script>
-    <script src="script/clock.js"></script>
+    <script src="../script/haikei.js"></script>
+    <script src="../script/clock.js"></script>
 
     <script src="https://kit.fontawesome.com/02a63194c3.js" crossorigin="anonymous"></script>
 
@@ -93,29 +92,31 @@
        <!--家具（手前）-->
        <img class="temae dark seat" id="back" src="images/back.png"><!--背もたれ-->
 
+
+       <div id="container2">
+         <div id="help">
+           <img src="images/help_bg.png" id="h_bg">
+           <img src="images/title.png" id="h_title">
+           <div>
+             <p id="toha">とは…</p>
+             <p>
+               暇な時にぼーっと眺めるサイト。<br>
+               少しでも誰かの癒しになれば幸いです。
+             </p>
+             <p>でも</p>
+             <p>
+               ただ眺めるだけじゃありません。<br>
+               色々なところをクリック（タップ）してみてください。
+             </p>
+             <p>ちょっとだけ彼の生活にいたずらできるかもしれません。</p>
+           </div>
+           <img src="images/try.png" id="h_hover">
+
+         </div>
+       </div>
+
     </div>
 
-    <div id="container2">
-    <div id="help">
-      <img src="images/help_bg.png" id="h_bg">
-      <img src="images/title.png" id="h_title">
-      <div>
-      <p id="toha">とは…</p>
-      <p>
-        暇な時にぼーっと眺めるサイト。<br>
-        少しでも誰かの癒しになれば幸いです。
-      </p>
-      <p>でも</p>
-      <p>
-        ただ眺めるだけじゃありません。<br>
-        色々なところをクリック（タップ）してみてください。
-      </p>
-      <p>ちょっとだけ彼の生活にいたずらできるかもしれません。</p>
-      </div>
-      <img src="images/try.png" id="h_hover">
-
-    </div>
-  </div>
   </div>
 </main>
 
