--- a/girl/girl.html
+++ b/girl/girl.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="target-densitydpi=device-dpi, width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
     <link rel="stylesheet" href="style.css">
     <script src="../jquery-3.5.1.min.js"></script>
-	  <script src="script/script.js"></script>
+	  <script src="../script/script.js"></script>
     <script src="../script/click.js"></script>
-    <script src="script/reload.js"></script>
+    <script src="../script/reload.js"></script>
     <script src="script/move.js"></script>
 
     <script src="../script/sleep.js"></script>
-    <script src="script/pc.js"></script>
+    <script src="script/pc.js"></script><!--マウス-->
     <script src="../script/read.js"></script>
-    <script src="script/syugei.js"></script>
+    <script src="script/syugei.js"></script><!--手芸-->
     <script src="../script/sumaho.js"></script>
 
     <script src="../script/haikei.js"></script>
