--- a/girl/girl.html
+++ b/girl/girl.html
@@ -12,9 +12,9 @@
     <script src="script/move.js"></script>
 
     <script src="../script/sleep.js"></script>
-    <script src="script/pc.js"></script><!--マウス-->
+    <script src="script/pc.js"></script>
     <script src="../script/read.js"></script>
-    <script src="script/syugei.js"></script><!--手芸-->
+    <script src="script/syugei.js"></script>
     <script src="../script/sumaho.js"></script>
 
     <script src="../script/haikei.js"></script>
