--- a/demo.html
+++ b/demo.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="target-densitydpi=device-dpi, width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
     <link rel="stylesheet" href="style.css">
     <script src="jquery-3.5.1.min.js"></script>
-	  <script src="script/script_demo.js"></script>
+	  <script src="script/script.js"></script>
     <script src="script/move.js"></script>
     <script src="script/click.js"></script>
     <script src="script/reload.js"></script>
@@ -43,8 +43,8 @@
 
 
        <!--背景-->
-       <img src="images/zoomin.png" id="zoomin" class="zoom" alt="zoomin">
-       <img src="images/zoomout.png" id="zoomout" class="zoom" alt="zoomout">
+       <img src="images/zoomin.png" id="zoomin" class="zoom hover" alt="zoomin">
+       <img src="images/zoomout.png" id="zoomout" class="zoom hover" alt="zoomout">
        <img src="images/title.png" id="title" alt="Peep">
        <img src="images/sun.png" id="sun" class="sora">
        <img src="" id="moon" class="sora">
