--- a/girl/girl.html
+++ b/girl/girl.html
@@ -42,8 +42,8 @@
 
 
        <!--背景-->
-       <img src="images/zoomin.png" id="zoomin" class="zoom" alt="zoomin">
-       <img src="images/zoomout.png" id="zoomout" class="zoom" alt="zoomout">
+       <img src="images/zoomin.png" id="zoomin" class="zoom hover" alt="zoomin">
+       <img src="images/zoomout.png" id="zoomout" class="zoom hover" alt="zoomout">
        <img src="images/title.png" id="title" alt="Peep">
        <img src="images/sun.png" id="sun" class="sora">
        <img src="" id="moon" class="sora">
