--- a/girl/girl.html
+++ b/girl/girl.html
@@ -42,23 +42,28 @@
 
 
        <!--背景-->
-       <img src="images/zoomin.png" id="zoomin" class="zoom hover" alt="zoomin">
-       <img src="images/zoomout.png" id="zoomout" class="zoom hover" alt="zoomout">
-       <img src="images/title.png" id="title" alt="Peep">
-       <img src="images/sun.png" id="sun" class="sora">
-       <img src="" id="moon" class="sora">
-       <img src="images/reload.png" id="reload" class="hover" alt="reload"><!--リロードボタン。後で消したい-->
-       <img src="images/help.png" id="help_btn" class="hover" alt="help">
-       <img src="images/bg.png" id="house" class="dark">
-       <div id="play"></div>
+      <img src="images/zoomin.png" id="zoomin" class="zoom hover" alt="zoomin">
+      <img src="images/zoomout.png" id="zoomout" class="zoom hover" alt="zoomout">
+      <img src="images/title.png" id="title" alt="Peep">
+      <img src="images/reload.png" id="reload" class="hover" alt="reload"><!--リロードボタン。後で消したい-->
+      <img src="images/help.png" id="help_btn" class="hover" alt="help">
 
-       <div id="clock">
-         <div id="c_1"></div>
-         <div id="c_2"></div>
-         <img id="colon" src="../images/tokei/colon.png">
-         <div id="c_3"></div>
-         <div id="c_4"></div>
-       </div>
+      <div id="clock">
+        <div id="c_1"></div>
+        <div id="c_2"></div>
+        <img id="colon" src="../images/tokei/colon.png">
+        <div id="c_3"></div>
+        <div id="c_4"></div>
+      </div>
+
+      <img src="images/sun.png" id="sun" class="sora">
+      <img src="" id="moon" class="sora">
+
+      <div id="reflect">
+
+       <img src="images/bg.png" id="house" class="dark">
+
+       <!--<div id="play"></div>-->
 
        <!--家具（奥）-->
        <img class="window" id="win" src="">
@@ -92,12 +97,15 @@
        <!--家具（手前）-->
        <img class="temae dark seat" id="back" src="images/back.png"><!--背もたれ-->
 
+     </div><!--リフレクトのしっぽ-->
+
 
        <div id="container2">
          <div id="help">
            <img src="images/help_bg.png" id="h_bg">
-           <img src="images/title.png" id="h_title">
+
            <div>
+             <img src="images/title.png" id="h_title">
              <p id="toha">とは…</p>
              <p>
                暇な時にぼーっと眺めるサイト。<br>
@@ -109,13 +117,15 @@
                色々なところをクリック（タップ）してみてください。
              </p>
              <p>ちょっとだけ彼の生活にいたずらできるかもしれません。</p>
+             <img src="images/try.png" id="h_hover">
            </div>
-           <img src="images/try.png" id="h_hover">
+
 
          </div>
        </div>
 
-    </div>
+
+  </div>
 
   </div>
 </main>
