--- a/girl/girl.html
+++ b/girl/girl.html
@@ -47,6 +47,7 @@
       <img src="images/title.png" id="title" alt="Peep">
       <img src="images/reload.png" id="reload" class="hover" alt="reload"><!--リロードボタン。後で消したい-->
       <img src="images/help.png" id="help_btn" class="hover" alt="help">
+      <div id="play"></div>
 
       <div id="clock">
         <div id="c_1"></div>
