--- a/girl/girl.html
+++ b/girl/girl.html
@@ -117,7 +117,7 @@
                ただ眺めるだけじゃありません。<br>
                色々なところをクリック（タップ）してみてください。
              </p>
-             <p>ちょっとだけ彼の生活にいたずらできるかもしれません。</p>
+             <p>ちょっとだけ彼女の生活にいたずらできるかもしれません。</p>
              <img src="images/try.png" id="h_hover">
            </div>
 
