--- a/girl/girl.html
+++ b/girl/girl.html
@@ -10,6 +10,7 @@
     <script src="../script/click.js"></script>
     <script src="../script/reload.js"></script>
     <script src="script/move.js"></script>
+    <script src="../script/demo.js"></script>
 
     <script src="../script/sleep.js"></script>
     <script src="script/pc.js"></script>
@@ -47,7 +48,6 @@
       <img src="images/title.png" id="title" alt="Peep">
       <img src="images/reload.png" id="reload" class="hover" alt="reload"><!--リロードボタン。後で消したい-->
       <img src="images/help.png" id="help_btn" class="hover" alt="help">
-      <div id="play"></div>
 
       <div id="clock">
         <div id="c_1"></div>
@@ -101,29 +101,33 @@
      </div><!--リフレクトのしっぽ-->
 
 
-       <div id="container2">
-         <div id="help">
-           <img src="images/help_bg.png" id="h_bg">
-
-           <div>
-             <img src="images/title.png" id="h_title">
-             <p id="toha">とは…</p>
-             <p>
-               暇な時にぼーっと眺めるサイト。<br>
-               少しでも誰かの癒しになれば幸いです。
-             </p>
-             <p>でも</p>
-             <p>
-               ただ眺めるだけじゃありません。<br>
-               色々なところをクリック（タップ）してみてください。
-             </p>
-             <p>ちょっとだけ彼女の生活にいたずらできるかもしれません。</p>
-             <img src="images/try.png" id="h_hover">
-           </div>
-
-
+     <div id="container2">
+       <div id="help">
+         <img src="images/help_bg.png" id="h_bg">
+         <img src="images/title.png" id="h_title">
+         <div>
+           <p id="toha">とは…</p>
+           <p>
+             暇な時にぼーっと眺めるサイト。<br>
+             少しでも誰かの癒しになれば幸いです。
+           </p>
+           <p>でも</p>
+           <p>
+             ただ眺めるだけじゃありません。<br>
+             色々なところをクリック（タップ）してみてください。
+           </p>
+           <p>ちょっとだけ彼の生活にいたずらできるかもしれません。</p>
+           <br>
+           <span id="where">福岡</span>の天気：<span id="weaher">晴れ</span>
+           <br><br>
+           現在のチャンネル：<span id="play"></span>
          </div>
+         <img src="images/try.png" id="h_hover">
+
+
+
        </div>
+     </div>
 
 
   </div>
