--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="script/move.js"></script>
     <script src="script/click.js"></script>
     <script src="script/reload.js"></script>
+    <script src="script/demo.js"></script>
 
     <script src="script/sleep.js"></script>
     <script src="script/pc.js"></script>
@@ -50,7 +51,7 @@
        <img src="images/reload.png" id="reload" class="hover" alt="reload"><!--リロードボタン。後で消したい-->
        <img src="images/help.png" id="help_btn" class="hover" alt="help">
        <img src="images/bg.png" id="house" class="dark">
-       <div id="play"></div>
+       <!--<div id="play"></div>-->
 
        <div id="clock">
          <div id="c_1"></div>
@@ -109,8 +110,14 @@
                色々なところをクリック（タップ）してみてください。
              </p>
              <p>ちょっとだけ彼の生活にいたずらできるかもしれません。</p>
+             <br>
+             <span id="where">現在の福岡</span>の天気：<span id="weaher">晴れ</span>
+             <br><br>
+             現在のチャンネル：<span id="play"></span>
            </div>
            <img src="images/try.png" id="h_hover">
+
+
 
          </div>
        </div>
