--- a/girl/girl.html
+++ b/girl/girl.html
@@ -80,7 +80,7 @@
        <img src="images/book.png" id="book" class="dark">
        <img src="images/seat.png" id="seat" class="dark seat">
 
-       <a href="../index.html"><image src="images/door.png" id="door" class="dark hover"></a>
+       <a href="../cat/cat.html"><image src="images/door.png" id="door" class="dark hover"></a>
 
        <img src="images/t_off.png" class="tv dark hover">
        <div id="t_monitor"><img src="images/t_off.png" class="tv dark hover"></div>
