--- a/demo.html
+++ b/demo.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="target-densitydpi=device-dpi, width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
+    <meta http-equiv="Refresh" content="1200;URL=girl/girl_demo.html">
     <link rel="stylesheet" href="style.css">
     <script src="jquery-3.5.1.min.js"></script>
 	  <script src="script/script.js"></script>
     <script src="script/move.js"></script>
     <script src="script/click.js"></script>
     <script src="script/reload.js"></script>
+    <script src="script/demo.js"></script>
 
     <script src="script/sleep.js"></script>
     <script src="script/pc.js"></script>
@@ -19,7 +21,6 @@
 
     <script src="script/haikei.js"></script>
     <script src="script/clock.js"></script>
-    <script src="script/demo.js"></script>
 
     <script src="https://kit.fontawesome.com/02a63194c3.js" crossorigin="anonymous"></script>
 
@@ -51,7 +52,7 @@
        <img src="images/reload.png" id="reload" class="hover" alt="reload"><!--リロードボタン。後で消したい-->
        <img src="images/help.png" id="help_btn" class="hover" alt="help">
        <img src="images/bg.png" id="house" class="dark">
-       <div id="play"></div>
+       <!--<div id="play"></div>-->
 
        <div id="clock">
          <div id="c_1"></div>
@@ -74,7 +75,7 @@
        <img src="images/book.png" id="book" class="dark">
        <img src="images/seat.png" id="seat" class="dark seat">
 
-       <a href="girl/girl.html"><image src="images/door.png" id="door" class="dark hover"></a>
+       <a href="girl/girl_demo.html"><image src="images/door.png" id="door" class="dark hover"></a>
 
        <img src="images/t_off.png" class="tv dark hover">
        <div id="t_monitor"><img src="images/t_off.png" class="tv dark hover"></div>
@@ -110,8 +111,14 @@
                色々なところをクリック（タップ）してみてください。
              </p>
              <p>ちょっとだけ彼の生活にいたずらできるかもしれません。</p>
+             <br>
+             <span id="where">現在の福岡</span>の天気：<span id="weaher">晴れ</span>
+             <br><br>
+             現在のチャンネル：<span id="play"></span>
            </div>
            <img src="images/try.png" id="h_hover">
+
+
 
          </div>
        </div>
